Upgrade gradle and dependencies