@@ -1,20 +1,18 @@
 package com.deg540.birthday_greetings;
 
+import jakarta.mail.Message;
+import jakarta.mail.MessagingException;
+import jakarta.mail.Session;
+import jakarta.mail.Transport;
+import jakarta.mail.internet.AddressException;
+import jakarta.mail.internet.InternetAddress;
+import jakarta.mail.internet.MimeMessage;
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.io.IOException;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import javax.mail.Message;
-import javax.mail.MessagingException;
-import javax.mail.Session;
-import javax.mail.Transport;
-import javax.mail.internet.AddressException;
-import javax.mail.internet.InternetAddress;
-import javax.mail.internet.MimeMessage;
 
 public class BirthdayService {
 
@@ -27,7 +25,7 @@ public class BirthdayService {
         List<Employee> birthdayEmployees = getEmployees(fileName)
                 .stream()
                 .filter(employee -> employee.isBirthday(ourDate))
-                .collect(Collectors.toList());
+                .toList();
 
         for (Employee employee : birthdayEmployees) {
             Mail mail = createMail(employee);
